crates/pcbc/tests/snapshots/netlist__netlist_mixed_position_formats.snap
---
source: crates/pcbc/tests/netlist.rs
expression: output
---
{
  "<TEMP_DIR>/boards/MixedPositions.zen:<root>": {
    "symbol_positions": {
      "comp:R1": {
        "rotation": 0,
        "x": 100,
        "y": 100
      },
      "sym:SIGNAL#1": {
        "rotation": 0,
        "x": 125,
        "y": 100
      },
      "sym:SIGNAL#2": {
        "rotation": 0,
        "x": 125,
        "y": 150
      },
      "sym:VCC#1": {
        "rotation": 0,
        "x": 80,
        "y": 80
      }
    }
  }
}
