crates/pcbc/tests/snapshots/netlist__netlist_simple_board_with_positions.snap
---
source: crates/pcbc/tests/netlist.rs
expression: output
---
{
  "<TEMP_DIR>/boards/SimpleBoard.zen:<root>": {
    "symbol_positions": {
      "comp:D1": {
        "rotation": 90,
        "x": 150,
        "y": 200
      },
      "comp:R1": {
        "rotation": 0,
        "x": 100,
        "y": 200
      },
      "sym:GND#1": {
        "rotation": 0,
        "x": 80,
        "y": 220
      },
      "sym:GND#2": {
        "rotation": 0,
        "x": 170,
        "y": 220
      },
      "sym:LED_ANODE#1": {
        "rotation": 0,
        "x": 125,
        "y": 200
      },
      "sym:VCC_3V3#1": {
        "rotation": 0,
        "x": 80,
        "y": 180
      },
      "sym:VCC_3V3#2": {
        "rotation": 0,
        "x": 120,
        "y": 180
      }
    }
  }
}
